# ChangeLog for dev-util/gob
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gob/ChangeLog,v 1.73 2011/01/12 23:21:23 eva Exp $

*gob-2.0.18 (12 Jan 2011)

  12 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org> +gob-2.0.18.ebuild:
  Version bump. Macro now exits when gob is not found and other minor updates.

  31 May 2010; Gilles Dartiguelongue <eva@gentoo.org> -gob-2.0.16.ebuild:
  Clean up old revisions.

*gob-2.0.17 (09 Apr 2010)

  09 Apr 2010; Pacho Ramos <pacho@gentoo.org> +gob-2.0.17.ebuild:
  Version bump: fix segfault when defining the finilize, dispose, and
  constructor methods; handle carriage returns in input files; use
  -G_MAXFLOAT and -G_MAXDOUBLE for the default minima for floating point
  numbers.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> gob-2.0.16.ebuild:
  Transfer Prefix keywords

*gob-2.0.16 (22 Jul 2009)

  22 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org> -gob-2.0.14.ebuild,
  +gob-2.0.16.ebuild:
  Version bump.

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org> gob-2.0.15.ebuild:
  arm/sh stable wrt #215541

  07 Apr 2008; Samuli Suominen <drac@gentoo.org> -gob-2.0.9.ebuild,
  -gob-2.0.11.ebuild, -gob-2.0.12.ebuild, gob-2.0.15.ebuild:
  amd64 stable wrt #215541

  07 Apr 2008; Markus Rothe <corsair@gentoo.org> gob-2.0.15.ebuild:
  Stable on ppc64; bug #215541

  03 Apr 2008; Brent Baude <ranger@gentoo.org> gob-2.0.15.ebuild:
  stable ppc, bug 215541

  02 Apr 2008; Christian Faulhammer <opfer@gentoo.org> gob-2.0.15.ebuild:
  stable x86, bug 215541

  01 Apr 2008; Raúl Porcel <armin76@gentoo.org> gob-2.0.15.ebuild:
  alpha/ia64/sparc stable wrt #215541

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org> gob-2.0.15.ebuild:
  Stable for HPPA (bug #215541).

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> gob-2.0.14.ebuild:
  Stable for HPPA too.

*gob-2.0.15 (06 Dec 2007)
