@@ -5,14 +5,14 @@ DIST gob2-2.0.15.tar.bz2 208071 RMD160 92ccd5dd2ed75d1c0bfb261769d8159c162220c8 
 DIST gob2-2.0.17.tar.bz2 216848 RMD160 eabc5d26e48d47b9183c288342e8bcf01ae9659d SHA1 25497258882d627e991da4599a507eea4e30a3dd SHA256 e9f52fff7ada88a36da1d412f8b2b57b44cc0527e545cf2f5d873c002c0da7f4
 DIST gob2-2.0.18.tar.bz2 221952 RMD160 dc49d4a6291b8bf36bac4ab22cefce7d99a97eb2 SHA1 adffebb99e2093d793072cef4f83d0e965419f47 SHA256 b126c5df6fc2376e7fcff0e4c40ea3f471df300f9b1c9663bdf363df36dfeb60
 EBUILD gob-2.0.15.ebuild 719 RMD160 45073fd8b7118b03c0ab111f0e06315297c6d1d2 SHA1 9f867aff234e199ff49e1952d1172091d9011c86 SHA256 5b2a2ad27858fc45b53cd2f00e6c38960940c6f5f6509250b4c379a6f42c00d3
-EBUILD gob-2.0.17.ebuild 780 RMD160 0f556fa9e58a0df053f8f45bb15def6139321f76 SHA1 d77a54cebeecdd030912900c01cceb13a3cb3a79 SHA256 25315d4ffdf14cb17cdefc0761d7d6e41fb1f6dfe3daaf28c1d3779471c8e89e
+EBUILD gob-2.0.17.ebuild 779 RMD160 6c4fed56326c085e1d463d0445e30b12db7a843a SHA1 6e7f6b46985295aa938b2cb5e095ba29c295d017 SHA256 fddb2ef12276ef5cfe1ab7bcd5da4ec942b089e421f8f0017337b079891cc7b4
 EBUILD gob-2.0.18.ebuild 789 RMD160 e2548858809c1b6e59e8a9dc7e665663388c6c89 SHA1 e1710a5f0a5b6b9348ee49a477f14ce258eae10b SHA256 e622939419b1c2e6457d887e8369e78f1cba8cb80794c0a144faa1fe0a3433ef
-MISC ChangeLog 7880 RMD160 f28374b2fc22421e5025bdc0088964792aee2065 SHA1 1aaaeee50665d6caf539782376d6aa8087a1ccbb SHA256 035c005e6a38d4672f502cf860ae49eb6191d30b5c6afc2e569426e7828c4dea
+MISC ChangeLog 7982 RMD160 65b359de354c7a5dd508ddab2e4a9b7a94a8930a SHA1 3882a36e23582903958847171a420d7ea1196d3f SHA256 57bb0832ffdb9698687c3f4451b637d8f735aede1a2cc90261efa875a9bdd3c2
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0uN3kACgkQ1fmVwcYIWAZj9ACgqsyowA/ptLn+VP6zC+S+ff1C
-YxQAoLEKabNL5IOOnY164rtyzM12yt87
-=gd6c
+iEYEARECAAYFAk01n4kACgkQNQqtfCuFnePRLgCdEHO2wfo8I4Wv64DgreMKupi6
+HwoAoJIa0iAomJZ7t1GhKE+qgi7zdxTZ
+=qP3f
 -----END PGP SIGNATURE-----
