@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gob
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gob/ChangeLog,v 1.73 2011/01/12 23:21:23 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gob/ChangeLog,v 1.74 2011/01/18 14:06:46 fauli Exp $
+
+  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org> gob-2.0.17.ebuild:
+  x86 stable, bug 348987
 
 *gob-2.0.18 (12 Jan 2011)
 
